--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,16 @@
 {
     "$schema": "https://getcomposer.org/schema.json",
-    "name": "laravel/laravel",
+    "name": "90zlaya/laravel-example-app",
     "type": "project",
-    "description": "The skeleton application for the Laravel framework.",
-    "keywords": ["laravel", "framework"],
-    "license": "MIT",
+    "description": "A modern Laravel 12 example application with Vite, Tailwind CSS, and API-ready setup.",
+    "keywords": ["laravel", "framework", "vite", "tailwindcss", "sanctum", "example"],
+    "license": "Proprietary",
+    "authors": [
+        {
+            "name": "Zlatan Stajic",
+            "email": "contact@zlatanstajic.com"
+        }
+    ],
     "require": {
         "php": "^8.2",
         "laravel/framework": "^12.0",
@@ -18,6 +24,7 @@
         "laravel/sail": "^1.41",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.6",
+        "nunomaduro/larastan": "^3.2",
         "phpunit/phpunit": "^11.5.3"
     },
     "autoload": {
@@ -37,6 +44,10 @@
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
         ],
+        "post-install-cmd": [
+            "cp .extras/git/pre-commit .git/hooks/pre-commit || true",
+            "php artisan optimize"
+        ],
         "post-update-cmd": [
             "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
         ],
@@ -45,13 +56,25 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi",
-            "@php -r \"file_exists('database/database.sqlite') || touch('database/database.sqlite');\"",
             "@php artisan migrate --graceful --ansi"
         ],
         "dev": [
             "Composer\\Config::disableProcessTimeout",
+            "composer run clear-route-cache",
             "npx concurrently -c \"#93c5fd,#c4b5fd,#fb7185,#fdba74\" \"php artisan serve\" \"php artisan queue:listen --tries=1\" \"php artisan pail --timeout=0\" \"npm run dev\" --names=server,queue,logs,vite"
-        ]
+        ],
+        "check": [
+            "composer run phpstan",
+            "composer run phpunit"
+        ],
+        "clear-route-cache": [
+            "php artisan route:clear",
+            "php artisan cache:clear",
+            "php artisan config:clear"
+        ],
+        "phpunit": "vendor/bin/phpunit --colors=always --testdox",
+        "phpstan": "vendor/bin/phpstan analyse",
+        "copy": "bash /var/www/html/open-source/shell-scripts/src/git-copy.sh $1 $2 $3"
     },
     "extra": {
         "laravel": {
