--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=laravel-example-app
+APP_NAME=todo-api
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -23,9 +23,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel-example-app
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=todo-api
+DB_USERNAME=todo-api
+DB_PASSWORD=secret
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
